Fixed subject action area hiding behind title-container and list-section to go up and down while NOT breaking other compenents

--- a/index.css
+++ b/index.css
@@ -31,11 +31,9 @@
   --topbar-height: 13vh;
   --section-container-height: calc(100vh - var(--topbar-height));
   --section-title-container-height: 5vh;
-  --section-action-container-height: 8vh;
+  --section-action-container-height: 16vh;
   --list-section-list-container-height: calc(
-  	var(--section-container-height) - var(
-  			--section-title-container-height
-  		) - var(--section-action-container-height)
+  	var(--section-container-height) - 5vh - 8vh
   );
   --section-action-button-height: 70%;
   --list-section-button-height: 7vh;
@@ -150,9 +148,12 @@ SECTION TITLE AREA
 */
 .section-title-container {
   flex-direction: row;
+  flex-shrink: 0;
   width: 100%;
   height: var(--section-title-container-height);
+  background: var(--background);
   border-bottom: 3px solid var(--border-black);
+  z-index: 1;
 }
 
 .section-title {
@@ -170,10 +171,13 @@ SECTION ACTION AREA
 ////////////////////////////////
 */
 .section-action-container {
+  position: relative;
+  top: 0;
   flex-direction: row;
+  flex-shrink: 0;
   width: 100%;
   height: var(--section-action-container-height);
-  border-bottom: 3px solid var(--border-black);
+  transition: 0.1s linear;
 }
 
 .section-action-inner-container {
@@ -187,10 +191,15 @@ SECTION ACTION AREA
   flex-direction: row;
   width: 100%;
   height: 100%;
+  border-bottom: 3px solid var(--border-black);
+}
+
+.section-action-row-1 {
+  background: lightcoral;
 }
 
 .section-action-row-2 {
-  height: 0;
+  background: cyan;
   transition: 0.1s linear;
 }
 
@@ -217,9 +226,13 @@ SECTION LIST AREA
 ////////////////////////////////
 */
 .list-container {
+  position: relative;
+  top: -8vh;
+  flex-shrink: 0;
   width: 100%;
   height: var(--list-section-list-container-height);
   background: var(--background);
+  z-index: 1;
 }
 
 .list-inner-container {
@@ -282,7 +295,7 @@ NO ITEMS IN LIST
   width: 100vw;
   height: 100vh;
   background: var(--popup-backdrop);
-  /* z-index: 1; */
+  z-index: 1000;
 }
 
 .modal-container {
@@ -429,6 +442,7 @@ CONTENT
   width: 100%;
   height: 100%;
   background: var(--popup-backdrop);
+  z-index: 1000;
 }
 
 .popup-container {
@@ -518,6 +532,7 @@ CONTENT
   padding: 10px 30px;
   background: var(--background);
   border-bottom: 6px solid var(--border-black);
+  z-index: 100;
 }
 
 .topbar-inner-container {
@@ -627,7 +642,8 @@ ACTION AREA
 ////////////////////////////////
 ////////////////////////////////
 */
-.add-subject-button, .edit-subject-button {
+.add-subject-button,
+.edit-subject-button {
   background: var(--background);
   border: 2px solid var(--border-black);
   transition: 0.1s linear;
