--- a/src/components/common/modal/modal.scss
+++ b/src/components/common/modal/modal.scss
@@ -7,7 +7,7 @@
 	width: 100vw;
 	height: 100vh;
 	background: var(--popup-backdrop);
-	/* z-index: 1; */
+	z-index: 1000;
 }
 
 .modal-container {
