--- a/src/components/common/popup/popup.scss
+++ b/src/components/common/popup/popup.scss
@@ -8,6 +8,7 @@
 	width: 100%;
 	height: 100%;
 	background: var(--popup-backdrop);
+	z-index: 1000;
 }
 
 .popup-container {
