--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -6,6 +6,7 @@
 	padding: 10px 30px;
 	background: var(--background);
 	border-bottom: 6px solid var(--border-black);
+	z-index: 100;
 }
 
 .topbar-inner-container {
